reali.com/ops/sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  selector:
    matchLabels:
      app: simple
  template:
    metadata:
      labels:
        app: simple
    spec:
      containers:
        - name: simple
          image: docker.io/wintrov/reali:latest
          ports:
            - protocol: TCP
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: simple
spec:
  type: NodePort
  selector:
    app: simple
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
